InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetworkMember__c/vlocity_ins__ProviderNetworkMember__c.object-meta.xml
<CustomObject>
    <description>Identifies an organization or an individual service provider such as hospital, physician or any other provider who agreed to provide its services for an insurance company network . Master-detail child object of a Provider Network.</description>
    <label>Provider Network Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Network Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>