InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetworkMember__c/fields/vlocity_ins__IsNetworkPreferred__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsNetworkPreferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Network Preferred</label>
    <type>Checkbox</type>
</CustomField>