InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderNetworkMember__c/fields/vlocity_ins__ProviderContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Network Members</relationshipLabel>
    <relationshipName>ProviderNetworkMembers</relationshipName>
    <type>Lookup</type>
</CustomField>